# yomisama

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/database/: mod.rs
api/src/database/dictionary/: cdb.rs  hashmap.rs  mod.rs
api/src/database/dictionary/importer/: jmdict_simplified.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
program/src/: App.svelte  bindings.ts  lib.rs  main.rs
program/src-tauri/: Cargo.toml  tauri.conf.json
program/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  query.rs  settings.rs  state.rs  tray.rs  windows.rs
program/src/lib/: FirstTimeSetup.svelte  Loading.svelte  Query.svelte  QueryEntry.svelte
src/database/: mod.rs
src/database/dictionary/: cdb.rs  mod.rs
src/database/dictionary/importer/: jmdict_simplified.rs  mod.rs
