[package]
name = "program"
version = "0.0.0"
edition = "2021"
default-run = "program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "system-tray",
    "window-all",
    "shell-open",
    "dialog-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
thiserror = "1.0.50"
once_cell = "1.19.0"
api = { path = "../../api" }
sob = "0.0.1"
typescript-type-def = { version = "0.5.9", features = ["json_value"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
